| Summary: | ASTERISK-27957: PJSIP proposes ICE candidates on answer even if not in offer | ||
| Reporter: | Torrey Searle (tsearle) | Labels: | pjsip |
| Date Opened: | 2018-07-09 04:32:57 | Date Closed: | 2018-07-18 14:30:40 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_sdp_rtp |
| Versions: | 13.22.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) ice.tgz | |
| Description: | Ice candidates in an SDP answer should only be given if there are valid candidates in the OFFER. However, chan_pjsip is always putting ICE candidates in the answer if the endpoint has ice support enabled | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-07-09 04:33:00.439-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Torrey Searle (tsearle) 2018-07-09 06:29:32.027-0500 tests to validate the patch By: Friendly Automation (friendly-automation) 2018-07-18 14:30:41.112-0500 Change 9430 merged by George Joseph: res_pjsip_sdp_rtp: include ice in ANSWER only if offered [https://gerrit.asterisk.org/9430|https://gerrit.asterisk.org/9430] By: Friendly Automation (friendly-automation) 2018-07-18 14:49:18.688-0500 Change 9429 merged by George Joseph: res_pjsip_sdp_rtp: include ice in ANSWER only if offered [https://gerrit.asterisk.org/9429|https://gerrit.asterisk.org/9429] By: Friendly Automation (friendly-automation) 2018-07-18 15:21:20.580-0500 Change 9376 merged by George Joseph: res_pjsip_sdp_rtp: include ice in ANSWER only if offered [https://gerrit.asterisk.org/9376|https://gerrit.asterisk.org/9376] | ||